--- a/HTML + CSS 3-5/d012/estilo/style.css
+++ b/HTML + CSS 3-5/d012/estilo/style.css
@@ -1,13 +1,25 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3:'Sriracha', cursive;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100%;
     background-color: darkgray;
+    font-family: var(--font1)
 }
 header {
     background-color: black;
@@ -18,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -42,11 +56,15 @@ a:hover {
 .imagem {
 background-color: rgba(29, 27, 27, 0.259);
 color: white;
+box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.41);
+background-attachment: fixed;
+background-size: cover;
 }
 
 .imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.309);
+    background-color: rgba(0, 0, 0, 0.371);
+    display: inline-block;
+    text-shadow: 1px 1px 0px black;
    
 }
 
@@ -54,11 +72,25 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
-    padding-left: 30px;
+    padding-left: 30px;;
+    font-family: var(--font3);
+    font-size: 2.5vw;
+}
+section > p {
+    padding-bottom: 2em;
 }
 
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
 
-
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
+   
+}
 
 
 
