--- a/HTML + CSS 4-5/ex026/mq002/estilos/paisagem.css
+++ b/HTML + CSS 4-5/ex026/mq002/estilos/paisagem.css
@@ -1,1 +1,7 @@
 @charset "utf-8";
+
+body {
+    background: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-repeat: no-repeat;
+}
