--- a/HTML + CSS 4-5/ex026/mq005/estilos/style.css
+++ b/HTML + CSS 4-5/ex026/mq005/estilos/style.css
@@ -1,1 +1,43 @@
 @charset "UTF-8";
+
+* {
+   font-family: Arial, Helvetica, sans-serif;
+   margin: 0px;
+   padding: 0px;
+}
+
+body, html {
+    background-color: rgb(169, 167, 167);
+}
+
+header {
+    background-color: rgb(155, 152, 152);
+}
+
+header > h1 {
+    padding: 10px;
+    text-align: center;
+}
+
+menu {
+    display: block;
+}
+menu > ul {
+    list-style-type: none;
+}
+menu > ul > li > a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(92, 91, 91);
+    color: white;
+    border: 2px solid black;
+}
+menu > ul > li > a:hover {
+    background-color:  rgb(155, 152, 152);
+}
+main {
+    width: 90vw;
+    background-color: white;
+}
