--- a/HTML + CSS 4-5/ex026/mq005/estilos/style.css
+++ b/HTML + CSS 4-5/ex026/mq005/estilos/style.css
@@ -18,9 +18,20 @@ header > h1 {
     padding: 10px;
     text-align: center;
 }
-
-menu {
+#burguer {
+    background-color: rgb(37, 36, 36);
     display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+#burguer:hover {
+background-color: white;
+color: black;
+}
+menu {
+    display: none;
 }
 menu > ul {
     list-style-type: none;
@@ -40,4 +51,17 @@ menu > ul > li > a:hover {
 main {
     width: 90vw;
     background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+article > h2 {
+    padding-bottom: 20px;
+}
+article > p {
+    text-align: justify;
+    margin-bottom: 10px;
+    text-indent: 20px;
 }
